fix logo alignment

--- a/css/screen.css
+++ b/css/screen.css
@@ -206,5 +206,6 @@
     width: 45px; 
     height: auto; 
     max-width: 100%; 
+    float: right;
     }
       
